# lsp-types

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: rust.yml
src/: call_hierarchy.rs  code_action.rs  code_lens.rs  completion.rs  document_diagnostic.rs  document_link.rs  document_symbols.rs  error_codes.rs  folding_range.rs  formatting.rs  inlay_hint.rs  inline_completion.rs  inline_value.rs  lib.rs  lsif.rs  macros.rs  notebook.rs  notification.rs  progress.rs  rename.rs  request.rs  semantic_tokens.rs  trace.rs  uri.rs  window.rs  workspace_diagnostic.rs
src/lsif/: mod.rs
src/lsp/: call_hierarchy.rs  code_action.rs  code_lens.rs  color.rs  completion.rs  document_diagnostic.rs  document_highlight.rs  document_link.rs  document_symbols.rs  file_operations.rs  folding_range.rs  formatting.rs  hover.rs  inlay_hint.rs  inline_completion.rs  inline_value.rs  linked_editing.rs  mod.rs  moniker.rs  notebook.rs  progress.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  trace.rs  type_hierarchy.rs  window.rs  workspace_diagnostic.rs  workspace_folders.rs  workspace_symbols.rs
tests/: lsif.rs
