[package]
name = "lsp-types"
version = "0.97.0"
edition = "2024"

description = "Types for interaction with a language server, using VSCode's Language Server Protocol"
authors = [
  "Markus Westerlind <marwes91@gmail.com>",
  "Bruno Medeiros <bruno.do.medeiros@gmail.com>",
]
repository = "https://github.com/gluon-lang/lsp-types"
keywords = ["language", "server", "lsp", "vscode", "lsif"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
bitflags = "2"
fluent-uri = "0.3"
serde_json = "1"
serde_repr = "0.1"
serde = { version = "1", features = ["derive"] }

[features]
default = []
# Enables proposed LSP extensions.
# NOTE: No semver compatibility is guaranteed for types enabled by this feature.
proposed = []

[lints.rust]
unsafe_code = "forbid"
[lints.rustdoc]
all = "warn"
[lints.clippy]
# pedantic = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

dbg_macro = "warn"
todo = "warn"
